--- a/RRDUtils/build.gradle
+++ b/RRDUtils/build.gradle
@@ -55,7 +55,7 @@ distributions {
 javadoc {
 	options {
 		links 'https://docs.oracle.com/en/java/javase/11/docs/api/'
-		addStringOption('Xdoclint:all,-missing,-html', '-quiet')
+		addBooleanOption('Xdoclint:all,-missing,-html', true)
 	}
 }
 
