--- a/RRDUtils/build.gradle
+++ b/RRDUtils/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	api 'com.fasterxml.jackson.core:jackson-core:2.13.4'
 	api 'com.fasterxml.jackson.core:jackson-annotations:2.13.4'
 	api 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
+	api 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
 	// newer versions of slf4j-api are not compatible with older versions of
 	// logback, newer version of logback (1.2.11) are not compatible with latest
 	// Spring Boot (2.7.3)
